[project]
name = "ads-mcp"
version = "0.1.0"
description = "Python MCP server for TikTok Ads Manager (Marketing API) – management and analytics."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "paragsam" },
]
license = "MIT"
dependencies = [
  "mcp[cli]>=1.2.0",
  "httpx>=0.27.0",
  "pydantic>=2.6.0",
]

[project.optional-dependencies]
dev = [
  "python-dotenv>=1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["tiktok_mcp_server"]

